# ofuck

./: README.md  dune-project  ofuck.opam
lib/: brainfuck.ml  dune  listExt.ml
test/: dune
